syntax = "proto3";

package server;

option go_package = "./todoPB";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";



// Messages

message GetItemsRequest {
    string message = 1;
}

message GetItemRequest {
    string id = 1;
}

message Item {
    string id = 1;
    string title = 2;
    string description = 3;
    bool closed = 4;        // @gotags: json:"closed"
}

message CreateItemRequest {
    Item item = 1;
}

message GetItemsResponse {
    repeated Item items = 1;
}

message GetItemResponse {
    Item item = 1;
}

message GeneralResponse {
    string message = 1;
}

service TodoService {

    rpc GetItems(google.protobuf.Empty) returns (GetItemsResponse) {
        option (google.api.http) = {
          get: "/todos"
        };
      };

    rpc GetItem(GetItemRequest) returns (GetItemResponse) {
        option (google.api.http) = {
            get: "/todos/{id}"
          };
    };

    rpc CreateItem(CreateItemRequest) returns (Item) {
        option (google.api.http) = {
            post: "/todos"
            body: "item"
      };   
    };    

    rpc CloseItem(GetItemRequest) returns (GeneralResponse) {
        option (google.api.http) = {
            post: "/todos/{id}"
            body: "id"
          };    
    };

    rpc DeleteItem(GetItemRequest) returns (GeneralResponse) {
        option (google.api.http) = {
            delete: "/todos/{id}"
          };   
    };
    
}